<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@drawable/background"
    android:isScrollContainer="true"
    tools:context=".view.Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin">
        <ImageView
            android:id="@+id/login_image"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:src="@drawable/vector_login"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dua"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/loginTitle"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="@dimen/four" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lima"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/nip"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidthFocused="1dp"
            app:startIconDrawable="@drawable/ic_user"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Nip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins"
                android:inputType="text"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dua"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/pass"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidthFocused="1dp"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/forgetPass_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/space_transparent"
            android:fontFamily="@font/poppins_semibold"
            android:onClick="forgetPass"
            android:layout_gravity="end"
            android:textAllCaps="false"
            android:text="@string/forget_pass"
            android:textColor="@color/secondary"
            android:textSize="@dimen/oneHalf" />
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tiga"
            android:background="@drawable/button"
            android:elevation="0dp"
            android:onClick="login"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:textAllCaps="false"
            android:padding="@dimen/dua"
            android:text="@string/login"
            android:textSize="@dimen/two"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>
</ScrollView>