<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ChangePassword"
    android:scrollbars="none"
    android:background="@drawable/background"
    android:isScrollContainer="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin">
        <ImageButton
            android:id="@+id/back"
            android:onClick="back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:elevation="@null"
            android:background="@null"
            tools:ignore="UnusedAttribute"
            android:contentDescription="@null" />
        <ImageView
            android:id="@+id/changepass_image"
            android:layout_width="match_parent"
            android:layout_height="216dp"
            android:src="@drawable/vector_change_pass"
            android:contentDescription="@null" />
        <TextView
            android:id="@+id/changepass_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/title_changepass"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="@dimen/four" />
        <TextView
            android:id="@+id/changepass_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/satu"
            android:letterSpacing="0.04"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/body_changepass"
            android:textSize="@dimen/oneHalfHalf"
            tools:ignore="UnusedAttribute" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lima"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/password_now"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidthFocused="1dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tiga"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/password_new"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidthFocused="1dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/changepass_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lima"
            android:background="@drawable/button"
            android:elevation="0dp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:onClick="resetnow"
            android:textAllCaps="false"
            android:padding="@dimen/dua"
            android:text="@string/resetpass"
            android:textSize="@dimen/two"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>
</ScrollView>