<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@drawable/background"
    android:isScrollContainer="true"
    tools:context=".view.ForgetPassword">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin"
        android:orientation="vertical">
        <ImageButton
            android:id="@+id/back"
            android:onClick="back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:elevation="@null"
            android:background="@null"
            tools:ignore="UnusedAttribute"
            android:contentDescription="@null" />
        <ImageView
            android:id="@+id/forgetpass_image"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:src="@drawable/vector_forgot_pass"
            android:contentDescription="@null" />
        <TextView
            android:id="@+id/forgetpass_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dua"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/title_forgetpass"
            android:textColor="@color/black"
            android:textSize="@dimen/four"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/forgetpass_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/satu"
            android:letterSpacing="0.04"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/body_forgetpass"
            android:textSize="14sp"
            tools:ignore="UnusedAttribute" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgetpass_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lima"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/email"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidthFocused="1dp"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/forgetpass_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lima"
            android:background="@drawable/button"
            android:elevation="0dp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:onClick="resetnow"
            android:textAllCaps="false"
            android:padding="@dimen/dua"
            android:text="@string/resetpass"
            android:textSize="@dimen/two"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>
</ScrollView>