<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:scrollbars="none"
    tools:context=".view.EditProfil" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editProfile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dua"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:onClick="back"
                android:elevation="@null"
                android:src="@drawable/ic_back"
                android:tint="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription,UnusedAttribute" />
            <TextView
                android:id="@+id/editProfile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editProfileTitle"
                android:textColor="@color/black"
                android:textSize="@dimen/three"
                android:fontFamily="@font/poppins_bold"
                android:lineSpacingMultiplier="0.7"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/editProfile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="@dimen/tiga"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/editProfile_layout"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editProfile_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tiga"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidthFocused="1dp"
            android:layout_below="@id/editProfile_image">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_edit_nama"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins"
                android:hint="@string/namaLengkap"
                android:textColor="@color/black"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editProfile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dua"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/email"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidthFocused="1dp"
            android:layout_below="@id/editProfile_nama">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_edit_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins"
                android:autofillHints="gkharismasetyobudi@gmail.com"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editProfile_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dua"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/telepon"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidthFocused="1dp"
            android:layout_below="@id/editProfile_email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_edit_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins"
                android:autofillHints="+6285220548109"
                android:textColor="@color/black"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editProfile_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dua"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/alamat"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidthFocused="1dp"
            android:layout_below="@+id/editProfile_phone">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_edit_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins"
                android:autofillHints="Jl. Mana aja No. 117 Jepara"
                android:textColor="@color/black"
                android:inputType="textPostalAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tujuh"
            android:layout_alignParentBottom="true"
            android:padding="@dimen/dua"
            android:text="@string/btn_simpan"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_semibold"
            android:background="@drawable/button"
            android:onClick="save"
            android:elevation="0dp"
            android:layout_below="@id/editProfile_address"
            tools:ignore="UnusedAttribute" />
    </RelativeLayout>
</ScrollView>